new modification in file index.html

--- a/index.html
+++ b/index.html
@@ -5,145 +5,175 @@
 		<meta charset = "utf-8">
 	</head>
 	<body>
-		<header>
+		<header class = "header">
 			<nav>
-				<a href = "\">
-					<img>
+				<a href = "\" class = "header__link-home">
+					<img class = "header__logo">
 				</a>
-				<a href = "#">Model S</a>
-				<a href = "#">Model X</a>
-				<a href = "#">Model 3</a>
-				<a href = "#">Roadster</a>
-				<a href = "#">Energy</a>
-				<a href = "#">Магазин</a>
-				<a href = "#">Войти</a>
+				<a href = "#" class = "header__link_model-s">Model S</a>
+				<a href = "#" class = "header__link_model-x">Model X</a>
+				<a href = "#" class = "header__link_model-3">Model 3</a>
+				<a href = "#" class = "header__link_model_roadster">Roadster</a>
+				<a href = "#" class = "header__link-energy">Energy</a>
+				<a href = "#" class = "header__link-shop">Магазин</a>
+				<a href = "#" class = "header__link-login">Войти</a>
 			</nav>
 		</header>
-		<section>
-			<h1>
+		<section class = "section-main">
+			<h1 class = "section-main__title">
 				Model S
 			</h1>
-			<div>
+			<div class = "section-main__welcome">
 				Добро пожаловать в будущее!
 			</div>
-			<img><img>
-			<div>
-				<img>
-				<div>2,7 сек
-					<p>0-100 км/час</p>
+			<img class = "header__logo">
+			<img class = "section-main__car-logo">
+			<div class = "section-main__lending">
+				<img class = "section-main__speed-logo">
+				<div class = "section-main__wrap_speed-logo">2,7 сек
+					<p class = "section-main__wrap_speed-curve">0-100 км/час</p>
 				</div>
-				<img>
-				<div>623км
-					<p>запас хода</p>
+				<img class = "section-main__way-logo">
+				<div class = "section-main__way-wrap">623км
+					<p class = "section-main__way">запас хода</p>
 				</div>
-				<img>
-				<div>Тест драйв
-					<button>
-						<a href="#">Заказать</a>
+				<img class = "section-main__steering-wheel_logo">
+				<div class = "section-main__steering-wheel_description">
+					Тест драйв
+				</div>
+				<div class = "wrap-order wrap_order_main-section">
+					<button class = "wrap-order__btn">
+						<a href="#" class = "wrap-order__link">Заказать</a>
 					</button>
 				</div>
 			</div>
-			<img>
+			<img class = "control-down">
 		</section>
-		<div>
-			<h1>Model S</h1>
+		<div class = "wrap-name">
+			<h1 class = "wrap-name__title">Model S</h1>
 		</div>
-		<img>
-		<article>
-			<h2>
+		<img class = "interior-car">
+		<article class = "aside_future-drive">
+			<h2 class = "future-drive__title">
 				Будущее вождения
 			</h2>
-			<p>
+			<p class = "future-drive__content">
 				Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 			</p>
-			<div>
-				<img>
+			<div class = "future-drive__wrap-display">
+				<img class = "future-drive__display">
 				17 дюймов
-				<p>
+				<p class = "future-drive__wrap">
 					Большой дисплей
 				</p>
 			</div>
-			<div>
-				<img>
+			<div class = "future-drive__wifi">
+				<img class = "future-drive__wifi-icon">
 				Беспроводное обновление ПО
-				<p>
+				<p class = "future-drive__wifi-inner">
 					Повышенная функциональность
 				</p>
 			</div>
-			<div>
-				<img>
+			<div class = "future-drive__fuel-tank">
+				<img class = "future-drive__fuel-icon">
 				894 литра
-				<p>
+				<p class = "future-drive__fuel-inner">
 					Объём грузового пространства
 				</p>
 			</div>
-			<div>
-				<img>
-				<a href="#">Узнать больше</a>
-				<button>
-						<a href="#">Заказать</a>
+			<div class = "wrap-info wrap-info__future-article">
+				<img class = "icon-info">
+				<button class = "info">	
+					<a href="#" class = "info__link">Узнать больше</a>
+				</button>
+			</div>
+			<div class = "wrap-order wrap-order__future-article">
+				<button class = "wrap-order__btn">
+						<a href="#" class = "wrap-order__link">Заказать</a>
 				</button>
 			</div>
 		</article>
-		<article>
-			<h2>
+		<article class = "aside_safe-car">
+			<h2 class = "safe-car__title">
 				Самый безопасный автомобиль в мире
 			</h2>
-			<p>Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
-			<div>
-				<h2>
+			<p class = "safe-car__content">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+			<div class = "safe-car__wrap-features">
+				<h2 class = "safe-car__features_title">
 					Оценка защиты:
 				</h2>
-				<div>
-					<nav>
-						<p>
+				<div class = "safe-car__features">
+					<nav class = "safe-car__list">
+						<p class = "safe-car__list_in-front">
 							Спереди
-							<img><img><img><img><img>
+							<img class = "star_in-front star">
+							<img class = "star_in-front star">
+							<img class = "star_in-front star">
+							<img class = "star_in-front star">
+							<img class = "star_in-front star">
 						</p>
-						<p>
+						<p class = "safe-car__list_on-the-side">
 							Сбоку
-							<img><img><img><img><img>
+							<img class = "star_on-the-side star">
+							<img class = "star_on-the-side star">
+							<img class = "star_on-the-side star">
+							<img class = "star_on-the-side star">
+							<img class = "star_on-the-side star">
 						</p>
-						<p>
+						<p calss = "safe-car__list_sideways">
 							Сбоку(стойка)
-							<img><img><img><img><img>
+							<img class = "star_sideways star">
+							<img class = "star_sideways star">
+							<img class = "star_sideways star">
+							<img class = "star_sideways star">
+							<img class = "star_sideways star">
 						</p>
-						<p>
+						<p class = "safe-car__list_driver">
 							Водитель
-							<img><img><img><img><img>
+							<img class = "star_driver star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
 						</p>
-						<p>
+						<p class = "safe-car__list_passenger">
 							Пассажир
-							<img><img><img><img><img>
+							<img class = "star_passenger star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
+							<img class = "star_driver star">
 						</p>
 					</nav>
 				</div>
 			</div>
-			<div>
-				<img><img>
+			<div class = "score-wrap">
+				<img class = "score-icon">
 				5 звезд безопасности
 			</div>
-			<div>
-				<img>
-				<a href="#">Узнать больше</a>
-				<button>
-						<a href="#">Заказать</a>
+			<div class = "wrap-info wrap-info__safe-car">
+				<img class = "icon-info">
+				<a href="#" class = "info__link">Узнать больше</a>
+			</div>
+			<div  class = "wrap-order wrap-order__safe-car">
+				<button class = "wrap-order__btn">
+						<a href="#" class = "wrap-order__link">Заказать</a>
 				</button>
 			</div>
 		</article>
-		<div>
+		<div class = "safe-wrap">
 			Model S
-			<img>
-			<div>
-				<img>
+			<img class = "corps-car">
+			<div class = "safe-wrap__line_long">
+				<img class = "line_long">
 				Защита от удара спереди
 			</div>
-			<div>
-				<img>
+			<div class = "safe-wrap__line-medium">
+				<img class = "line_medium">
 				Защита от удара сбоку
 			</div>
-			<div>
-				<img>
+			<div class = "safe-wrap__line_small">
+				<img class = "line_small">
 				Минимальный риск перевернуться в аварии
 			</div>
 		</div>
