--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Tesla</title>
 		<meta charset = "utf-8">
+		<link href = "./fonts.css" rel = "stylesheet">
 	</head>
 	<body>
 		<header class = "header">
