new modification in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<title>Tesla</title>
 		<meta charset = "utf-8">
-		<link rel = "stylesheet" href = "./fonts.css">
+		<link href = "./fonts.css" rel = "stylesheet">
+		<link href = "./style.css" rel = "stylesheet">
 	</head>
 	<body>
 		<header class = "header">
@@ -25,6 +26,8 @@
 						<span class = "burger__icon"></span>
 					</div>
 				</div>
+				<a href = "#" class = "header__link">Магазин</a>
+				<a href = "#" class = "header__link">Войти</a>
 			</nav>
 		</header>
 		<section class = "section-main">
