--- a/index.html
+++ b/index.html
@@ -4,177 +4,187 @@
 		<title>Tesla</title>
 		<meta charset = "utf-8">
 		<link href = "./fonts.css" rel = "stylesheet">
+		<link href = "./style.css" rel = "stylesheet">
 	</head>
 	<body>
 		<header class = "header">
-			<nav>
+			<nav class = "header__menu">
 				<a href = "\" class = "header__link-home">
 					<img class = "header__logo">
 				</a>
-				<a href = "#" class = "header__link_model-s">Model S</a>
-				<a href = "#" class = "header__link_model-x">Model X</a>
-				<a href = "#" class = "header__link_model-3">Model 3</a>
-				<a href = "#" class = "header__link_model_roadster">Roadster</a>
-				<a href = "#" class = "header__link-energy">Energy</a>
-				<a href = "#" class = "header__link-shop">Магазин</a>
-				<a href = "#" class = "header__link-login">Войти</a>
+				<a href = "#" class = "header__link">Model S</a>
+				<a href = "#" class = "header__link">Model X</a>
+				<a href = "#" class = "header__link">Model 3</a>
+				<a href = "#" class = "header__link">Roadster</a>
+				<a href = "#" class = "header__link">Energy</a>
+				<a href = "#" class = "header__link">Магазин</a>
+				<a href = "#" class = "header__link">Войти</a>
 			</nav>
 		</header>
 		<section class = "section-main">
 			<h1 class = "section-main__title">
 				Model S
 			</h1>
-			<div class = "section-main__welcome">
+			<div class = "section-main__subtitle">
 				Добро пожаловать в будущее!
 			</div>
 			<img class = "header__logo">
 			<img class = "section-main__car-logo">
-			<div class = "section-main__lending">
-				<img class = "section-main__speed-logo">
-				<div class = "section-main__wrap_speed-logo">2,7 сек
-					<p class = "section-main__wrap_speed-curve">0-100 км/час</p>
+			<div class = "technol-body">
+				<img class = "technol-body__speed-logo">
+				<div class = "speed">
+					2,7 сек
+					<p class = "speed__inner">
+					0-100 км/час
+					</p>
 				</div>
-				<img class = "section-main__way-logo">
-				<div class = "section-main__way-wrap">623км
-					<p class = "section-main__way">запас хода</p>
+				<img class = "technol-body__way-logo">
+				<div class = "way">623км
+					<p class = "way__inner">запас хода</p>
 				</div>
-				<img class = "section-main__steering-wheel_logo">
-				<div class = "section-main__steering-wheel_description">
+				<img class = "technol-body__wheel-logo">
+				<div class = "wheel">
 					Тест драйв
 				</div>
-				<div class = "wrap-order wrap_order_main-section">
-					<button class = "wrap-order__btn">
-						<a href="#" class = "wrap-order__link">Заказать</a>
+				<div class = "order order__section-main">
+					<button class = "order__btn">
+						<a href="#" class = "order__link">Заказать</a>
 					</button>
 				</div>
 			</div>
 			<img class = "control-down">
 		</section>
-		<div class = "wrap-name">
-			<h1 class = "wrap-name__title">Model S</h1>
+		<div class = "wrap-title">
+			<h1 class = "title">Model S</h1>
 		</div>
-		<img class = "interior-car">
-		<article class = "aside_future-drive">
+		<div class = "interior">
+			<img class = "interior__icon">
+		</div>
+		<article class = "aside__future-drive">
 			<h2 class = "future-drive__title">
 				Будущее вождения
 			</h2>
 			<p class = "future-drive__content">
 				Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 			</p>
-			<div class = "future-drive__wrap-display">
-				<img class = "future-drive__display">
+			<div class = "display">
+				<img class = "display__icon">
 				17 дюймов
-				<p class = "future-drive__wrap">
+				<p class = "display__inner">
 					Большой дисплей
 				</p>
 			</div>
-			<div class = "future-drive__wifi">
-				<img class = "future-drive__wifi-icon">
+			<div class = "wifi">
+				<img class = "wifi__icon">
 				Беспроводное обновление ПО
-				<p class = "future-drive__wifi-inner">
+				<p class = "wifi__inner">
 					Повышенная функциональность
 				</p>
 			</div>
-			<div class = "future-drive__fuel-tank">
-				<img class = "future-drive__fuel-icon">
+			<div class = "fuel">
+				<img class = "fuel__icon">
 				894 литра
-				<p class = "future-drive__fuel-inner">
+				<p class = "fuel__inner">
 					Объём грузового пространства
 				</p>
 			</div>
-			<div class = "wrap-info wrap-info__future-article">
-				<img class = "icon-info">
-				<button class = "info">	
+			<div class = "info info__future-drive">
+				<img class = "info__icon">
+				<button class = "info__btn">	
 					<a href="#" class = "info__link">Узнать больше</a>
 				</button>
 			</div>
-			<div class = "wrap-order wrap-order__future-article">
-				<button class = "wrap-order__btn">
-						<a href="#" class = "wrap-order__link">Заказать</a>
+			<div class = "order order__future-article">
+				<button class = "order__btn">
+						<a href="#" class = "order__link">Заказать</a>
 				</button>
 			</div>
 		</article>
-		<article class = "aside_safe-car">
+		<article class = "aside__safe-car">
 			<h2 class = "safe-car__title">
 				Самый безопасный автомобиль в мире
 			</h2>
 			<p class = "safe-car__content">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
-			<div class = "safe-car__wrap-features">
-				<h2 class = "safe-car__features_title">
+			<div class = "features">
+				<h2 class = "features__title">
 					Оценка защиты:
 				</h2>
-				<div class = "safe-car__features">
-					<nav class = "safe-car__list">
-						<p class = "safe-car__list_in-front">
+				<div class = "features__list">
+					<nav class = "list">
+						<p class = "list__in-front">
 							Спереди
-							<img class = "star_in-front star">
-							<img class = "star_in-front star">
-							<img class = "star_in-front star">
-							<img class = "star_in-front star">
-							<img class = "star_in-front star">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
 						</p>
-						<p class = "safe-car__list_on-the-side">
+						<p class = "list__on-the-side">
 							Сбоку
-							<img class = "star_on-the-side star">
-							<img class = "star_on-the-side star">
-							<img class = "star_on-the-side star">
-							<img class = "star_on-the-side star">
-							<img class = "star_on-the-side star">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
 						</p>
-						<p calss = "safe-car__list_sideways">
+						<p class = "list__sideways">
 							Сбоку(стойка)
-							<img class = "star_sideways star">
-							<img class = "star_sideways star">
-							<img class = "star_sideways star">
-							<img class = "star_sideways star">
-							<img class = "star_sideways star">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
 						</p>
-						<p class = "safe-car__list_driver">
+						<p class = "list__driver">
 							Водитель
-							<img class = "star_driver star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
 						</p>
-						<p class = "safe-car__list_passenger">
+						<p class = "list__passenger">
 							Пассажир
-							<img class = "star_passenger star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
-							<img class = "star_driver star">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
+							<img class = "list__item">
 						</p>
 					</nav>
 				</div>
 			</div>
-			<div class = "score-wrap">
-				<img class = "score-icon">
+			<div class = "score">
+				<img class = "score__icon">
 				5 звезд безопасности
 			</div>
-			<div class = "wrap-info wrap-info__safe-car">
-				<img class = "icon-info">
+			<div class = "info info__safe-car">
+				<img class = "info__icon">
 				<a href="#" class = "info__link">Узнать больше</a>
 			</div>
-			<div  class = "wrap-order wrap-order__safe-car">
-				<button class = "wrap-order__btn">
-						<a href="#" class = "wrap-order__link">Заказать</a>
+			<div  class = "order order__safe-car">
+				<button class = "order__btn">
+						<a href="#" class = "order__link">Заказать</a>
 				</button>
 			</div>
 		</article>
-		<div class = "safe-wrap">
-			Model S
-			<img class = "corps-car">
-			<div class = "safe-wrap__line_long">
-				<img class = "line_long">
+		<div class = "safe-body">
+			<div class = "safe-body__title">
+				Model S
+			</div>
+			<div class = "corps">
+				<img class = "corps__icon">
+			</div>
+			<div class = "item__line_long">
+				<img class = "item__icon">
 				Защита от удара спереди
 			</div>
-			<div class = "safe-wrap__line-medium">
-				<img class = "line_medium">
+			<div class = "item__line_medium">
+				<img class = "item__icon">
 				Защита от удара сбоку
 			</div>
-			<div class = "safe-wrap__line_small">
-				<img class = "line_small">
+			<div class = "item__line_small">
+				<img class = "item__icon">
 				Минимальный риск перевернуться в аварии
 			</div>
 		</div>
