new modification in file index

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				<a href = "#" class = "header__link">Model 3</a>
 				<a href = "#" class = "header__link">Roadster</a>
 				<a href = "#" class = "header__link">Energy</a>
-				<div class = "wrapper">
+				<div class = "header__wrapper">
 					<a href = "#" class = "wrapper__link">Магазин</a>
 					<a href = "#" class = "wrapper__link">Войти</a>
-					<div class = "wrapper__burger burger">
+					<div class = "burger">
 						<span class = "burger__icon"></span>
 						<span class = "burger__icon"></span>
 						<span class = "burger__icon"></span>
@@ -39,13 +39,13 @@
 				<img class = "technol-body__speed-logo">
 				<div class = "speed">
 					2,7 сек
-					<p class = "speed__inner">
+					<p class = "speed">
 					0-100 км/час
 					</p>
 				</div>
 				<img class = "technol-body__way-logo">
 				<div class = "way">623км
-					<p class = "way__inner">запас хода</p>
+					<p class = "way">запас хода</p>
 				</div>
 				<img class = "technol-body__wheel-logo">
 				<div class = "wheel">
@@ -74,29 +74,27 @@
 				<div class = "display">
 					<img class = "display__icon">
 					17 дюймов
-					<p class = "display__inner">
+					<p class = "display">
 						Большой дисплей
 					</p>
 				</div>
 				<div class = "wifi">
 					<img class = "wifi__icon">
 					Беспроводное обновление ПО
-					<p class = "wifi__inner">
+					<p class = "wifi">
 						Повышенная функциональность
 					</p>
 				</div>
 				<div class = "fuel">
 					<img class = "fuel__icon">
 					894 литра
-					<p class = "fuel__inner">
+					<p class = "fuel">
 						Объём грузового пространства
 					</p>
 				</div>
 				<div class = "info info__future-drive">
 					<img class = "info__icon">
-					<button class = "info__btn">	
 						<a href="#" class = "info__link">Узнать больше</a>
-					</button>
 				</div>
 				<div class = "order order__future-article">
 					<a href="#" class = "order__link">Заказать</a>
@@ -111,49 +109,57 @@
 					<h2 class = "features__title">
 						Оценка защиты:
 					</h2>
-					<div class = "features__list">
-						<nav class = "list">
-							<p class = "list__in-front">
-								Спереди
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-							</p>
-							<p class = "list__on-the-side">
-								Сбоку
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-							</p>
-							<p class = "list__sideways">
-								Сбоку(стойка)
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-							</p>
-							<p class = "list__driver">
-								Водитель
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-							</p>
-							<p class = "list__passenger">
-								Пассажир
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-								<img class = "list__item">
-							</p>
-						</nav>
+					<div class = "star">
+						<div class = "star__title">
+							Спереди
+						</div>
+						<div class = "star__wrapper">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+						</div>
+						<div class = "star__title">
+							Сбоку
+						</div>
+						<div class = "star__wrapper">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+						</div>
+						<div class = "star__title">
+							Сбоку(стойка)
+						</div>
+						<div class = "star__wrapper">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+						</div>
+						<div class = "star__title">
+							Водитель
+						</div>
+						<div class = "star__wrapper">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+						</div>
+						<div class = "star__title">
+							Пассажир
+						</div>
+						<div class = "star__wrapper">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+							<img class = "star__item">
+						</div>
 					</div>
 				</div>
 				<div class = "score">
@@ -165,7 +171,7 @@
 					<a href="#" class = "info__link">Узнать больше</a>
 				</div>
 				<div  class = "order order__safe-car">
-						<a href="#" class = "order__link">Заказать</a>
+					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</article>
 			<div class = "safe-body">
