new modification in index.html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<a href = "#" class = "header__link">Roadster</a>
 				<a href = "#" class = "header__link">Energy</a>
 				<div class = "header__wrapper">
-					<a href = "#" class = "wrapper__link">Магазин</a>
-					<a href = "#" class = "wrapper__link">Войти</a>
+					<a href = "#" class = "header__wrapper_link">Магазин</a>
+					<a href = "#" class = "header__wrapper_link">Войти</a>
 					<div class = "burger">
 						<span class = "burger__icon"></span>
 						<span class = "burger__icon"></span>
@@ -33,23 +33,33 @@
 			<div class = "section-main__subtitle">
 				Добро пожаловать в будущее!
 			</div>
-			<img class = "main-logo">
-			<img class = "ModelS-logo">
+			<div class = "section-main__img">
+				<div class = "section-main__logo">
+					<img class = "main-logo">
+				</div>
+				<img class = "modelS-logo">
+			</div>
 			<div class = "technol-body">
-				<img class = "technol-body__speed-logo">
-				<div class = "speed">
-					2,7 сек
-					<p class = "speed">
-					0-100 км/час
-					</p>
+				<div class = "technol-body__charset charset">	
+					<img class = "charset__speed-logo">
+					<div class = "charset__speed">
+						2,7 сек
+						<p class = "charset__speed">
+						0-100 км/час
+						</p>
+					</div>
 				</div>
-				<img class = "technol-body__way-logo">
-				<div class = "way">623км
-					<p class = "way">запас хода</p>
+				<div class = "technol-body__charset charset">
+					<img class = "charset__way-logo">
+					<div class = "charset__way">623км
+						<p class = "charset__way">запас хода</p>
+					</div>
 				</div>
-				<img class = "technol-body__wheel-logo">
-				<div class = "wheel">
-					<a href = "#" class = "wheel__link">Тест драйв</a>
+				<div class = "technol-body__charset charset">
+					<img class = "charset__wheel-logo">
+					<div class = "charset__wheel">
+						<a href = "#" class = "charset__wheel_link">Тест драйв</a>
+					</div>
 				</div>
 				<div class = "order order__section-main">
 					<a href="#" class = "order__link">Заказать</a>
