--- a/index.html
+++ b/index.html
@@ -81,24 +81,24 @@
 				<p class = "future-drive__content">
 					Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 				</p>
-				<div class = "display">
-					<img class = "display__icon">
+				<div class = "future-drive__charset_display charset">
+					<img class = "charset__display_icon">
 					17 дюймов
-					<p class = "display">
+					<p class = "charset__display">
 						Большой дисплей
 					</p>
 				</div>
-				<div class = "wifi">
-					<img class = "wifi__icon">
+				<div class = "future-drive__charset_wifi charset">
+					<img class = "charset__wifi_icon">
 					Беспроводное обновление ПО
-					<p class = "wifi">
+					<p class = "charset__wifi">
 						Повышенная функциональность
 					</p>
 				</div>
-				<div class = "fuel">
-					<img class = "fuel__icon">
+				<div class = "future-drive__charset_fuel charset">
+					<img class = "charset__fuel_icon">
 					894 литра
-					<p class = "fuel">
+					<p class = "charset__fuel">
 						Объём грузового пространства
 					</p>
 				</div>
