new mdfction in file index.html

--- a/index.html
+++ b/index.html
@@ -39,29 +39,34 @@
 				</div>
 				<img class = "modelS-logo">
 			</div>
-			<div class = "technol-body">
-				<div class = "technol-body__charset charset">	
-					<img class = "charset__speed-logo">
-					<div class = "charset__speed">
-						2,7 сек
-						<p class = "charset__speed">
-						0-100 км/час
-						</p>
+			<div class = "character">
+				<div class = "character__speed">	
+					<img class = "character__item_icon">
+					<div class = "character__item_big">
+						2,7
+						<span class = "character__item_little"> 
+							сек
+						</span>
+						<p class = "character__item_small">0-100 км/час</p>
 					</div>
 				</div>
-				<div class = "technol-body__charset charset">
-					<img class = "charset__way-logo">
-					<div class = "charset__way">623км
-						<p class = "charset__way">запас хода</p>
+				<div class = "character__way">
+					<img class = "character__item_icon">
+					<div class = "character__item_big">
+						623
+						<span class = "character__item_little">
+							км
+						</span>
+						<p class = "character__item_small">запас хода</p>
 					</div>
 				</div>
-				<div class = "technol-body__charset charset">
-					<img class = "charset__wheel-logo">
-					<div class = "charset__wheel">
-						<a href = "#" class = "charset__wheel_link">Тест драйв</a>
+				<div class = "character__wheel">
+					<img class = "character__item_icon">
+					<div class = "character__item_big">
+						<a href = "#" class = "character__item_link">Тест драйв</a>
 					</div>
 				</div>
-				<div class = "order order__section-main">
+				<div class = "order_section-main">
 					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</div>
@@ -71,8 +76,8 @@
 			<div class = "section-desc__wrap">
 				<h1 class = "section-desc__title">Model S</h1>
 			</div>
-			<div class = "interior">
-				<img class = "interior__icon">
+			<div class = "item__interior">
+				<img class = "item__icon_interior">
 			</div>
 			<article class = "section-desc__articles future-drive">
 				<h2 class = "future-drive__title">
@@ -81,32 +86,44 @@
 				<p class = "future-drive__content">
 					Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 				</p>
-				<div class = "future-drive__charset_display charset">
-					<img class = "charset__display_icon">
-					17 дюймов
-					<p class = "charset__display">
-						Большой дисплей
-					</p>
+				<div class = "character__display">
+					<img class = "character__item_icon">
+					<div class = "character__item_big">
+						17 
+						<span class = "character__item_little">
+							дюймов
+						</span>
+						<p class = "character__item_small">
+							Большой дисплей
+						</p>
+					</div>
 				</div>
-				<div class = "future-drive__charset_wifi charset">
-					<img class = "charset__wifi_icon">
-					Беспроводное обновление ПО
-					<p class = "charset__wifi">
-						Повышенная функциональность
-					</p>
+				<div class = "character__wifi">
+					<img class = "character__item_icon">
+					<div class = "character__item_big">	
+						Беспроводное обновление ПО
+						<p class = "character__item_small">
+							Повышенная функциональность
+						</p>
+					</div>
 				</div>
-				<div class = "future-drive__charset_fuel charset">
-					<img class = "charset__fuel_icon">
-					894 литра
-					<p class = "charset__fuel">
-						Объём грузового пространства
-					</p>
+				<div class = "character__fuel">
+					<img class = "character__item_icon">
+					<div class = "character__item_big">	
+						894 
+						<span class = "character__item_little">
+							литра
+						</span>
+						<p class = "character__item_small">
+							Объём грузового пространства
+						</p>
+					</div>
 				</div>
-				<div class = "info info__future-drive">
+				<div class = "info_future-drive">
 					<img class = "info__icon">
 						<a href="#" class = "info__link">Узнать больше</a>
 				</div>
-				<div class = "order order__future-article">
+				<div class = "order_future-drive">
 					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</article>
@@ -120,7 +137,7 @@
 						Оценка защиты:
 					</h2>
 					<div class = "star">
-						<div class = "star__title">
+						<div class = "star__title_front">
 							Спереди
 						</div>
 						<div class = "star__wrapper">
@@ -130,7 +147,7 @@
 							<img class = "star__item">
 							<img class = "star__item">
 						</div>
-						<div class = "star__title">
+						<div class = "star__title_side">
 							Сбоку
 						</div>
 						<div class = "star__wrapper">
@@ -140,7 +157,7 @@
 							<img class = "star__item">
 							<img class = "star__item">
 						</div>
-						<div class = "star__title">
+						<div class = "star__title_side-bar">
 							Сбоку(стойка)
 						</div>
 						<div class = "star__wrapper">
@@ -150,7 +167,7 @@
 							<img class = "star__item">
 							<img class = "star__item">
 						</div>
-						<div class = "star__title">
+						<div class = "star__title_driver">
 							Водитель
 						</div>
 						<div class = "star__wrapper">
@@ -160,7 +177,7 @@
 							<img class = "star__item">
 							<img class = "star__item">
 						</div>
-						<div class = "star__title">
+						<div class = "star__title_passenger">
 							Пассажир
 						</div>
 						<div class = "star__wrapper">
@@ -176,11 +193,11 @@
 					<img class = "score__icon">
 					5 звезд безопасности
 				</div>
-				<div class = "info info__safe-car">
+				<div class = "info_safe-car">
 					<img class = "info__icon">
 					<a href="#" class = "info__link">Узнать больше</a>
 				</div>
-				<div  class = "order order__safe-car">
+				<div  class = "order_safe-car">
 					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</article>
@@ -188,8 +205,8 @@
 				<div class = "safe-body__title">
 					Model S
 				</div>
-				<div class = "corps">
-					<img class = "corps__icon">
+				<div class = "item__corps">
+					<img class = "item__icon_corps">
 				</div>
 				<div class = "item__line_long">
 					<img class = "item__icon">
