new modification in file index.html

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				</div>
 				<img class = "modelS-logo">
 			</div>
-			<div class = "character">
-				<div class = "character__speed">	
+			<div class = "section-main__wrapper">
+				<div class = "character">	
 					<img class = "character__item_icon">
 					<div class = "character__item_big">
 						2,7
@@ -50,7 +50,7 @@
 						<p class = "character__item_small">0-100 км/час</p>
 					</div>
 				</div>
-				<div class = "character__way">
+				<div class = "character">
 					<img class = "character__item_icon">
 					<div class = "character__item_big">
 						623
@@ -60,10 +60,10 @@
 						<p class = "character__item_small">запас хода</p>
 					</div>
 				</div>
-				<div class = "character__wheel">
-					<img class = "character__item_icon">
-					<div class = "character__item_big">
-						<a href = "#" class = "character__item_link">Тест драйв</a>
+				<div class = "btn_test-drive">
+					<img class = "btn__item_icon">
+					<div class = "btn__item_big">
+						<a href = "#" class = "btn__item_link">Тест драйв</a>
 					</div>
 				</div>
 				<div class = "order_section-main">
@@ -86,7 +86,7 @@
 				<p class = "future-drive__content">
 					Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 				</p>
-				<div class = "character__display">
+				<div class = "character">
 					<img class = "character__item_icon">
 					<div class = "character__item_big">
 						17 
@@ -98,7 +98,7 @@
 						</p>
 					</div>
 				</div>
-				<div class = "character__wifi">
+				<div class = "character">
 					<img class = "character__item_icon">
 					<div class = "character__item_big">	
 						Беспроводное обновление ПО
@@ -107,7 +107,7 @@
 						</p>
 					</div>
 				</div>
-				<div class = "character__fuel">
+				<div class = "character">
 					<img class = "character__item_icon">
 					<div class = "character__item_big">	
 						894 
@@ -121,7 +121,8 @@
 				</div>
 				<div class = "info_future-drive">
 					<img class = "info__icon">
-						<a href="#" class = "info__link">Узнать больше</a>
+					<a href="#" class = "info__link">Узнать больше
+					</a>
 				</div>
 				<div class = "order_future-drive">
 					<a href="#" class = "order__link">Заказать</a>
