--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						Оценка защиты:
 					</h2>
 					<div class = "star">
-						<div class = "star__title_front">
+						<div class = "star__title_front safe-car__features">
 							Спереди
 						</div>
 						<div class = "star__wrapper">
