--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 					</div>
 				</div>
 				<div class = "order_section-main">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = order__item_big>
+						<a href="#" class = "order__item_link">Заказать</a>
+					</div>
 				</div>
 			</div>
 			<img class = "control-down">
@@ -120,12 +122,15 @@
 					</div>
 				</div>
 				<div class = "info_future-drive">
-					<img class = "info__icon">
-					<a href="#" class = "info__link">Узнать больше
-					</a>
+					<img class = "info__item_icon">
+					<div class = "info__item_big">	
+						<a href="#" class = "info__item_link">Узнать больше</a>
+					</div>
 				</div>
 				<div class = "order_future-drive">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = "order__item_big">
+						<a href="#" class = "order__item_link">Заказать</a>
+					</div>
 				</div>
 			</article>
 			<article class = "section-desc__articles safe-car">
@@ -195,11 +200,15 @@
 					5 звезд безопасности
 				</div>
 				<div class = "info_safe-car">
-					<img class = "info__icon">
-					<a href="#" class = "info__link">Узнать больше</a>
+					<img class = "info__item_icon">
+					<div class = "info__item_big">
+						<a href="#" class = "info__item_link">Узнать больше</a>
+					</div>
 				</div>
 				<div  class = "order_safe-car">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = "order__item_big">	
+						<a href="#" class = "order__item_link">Заказать</a>
+					</div>
 				</div>
 			</article>
 			<div class = "safe-body">
